--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,12 @@
   "extends": [
     "@antfu",
     "@unocss"
-  ]
+  ],
+  "rules": {
+    "no-console": "off",
+    "vue/no-unused-vars": "off",
+    "vue/no-use-v-if-with-v-for": ["error", {
+      "allowUsingIterationVar": false
+    }]
+  }
 }
